--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col col-md-4 col-12 order-md-1 order-2 mb-3">
+      <div class="col col-md-3 col-12 order-md-1 order-2 mb-3">
         <div class="card">
           <div class="card-header">
             Add Train
@@ -51,7 +51,7 @@
           </div>
         </div>
       </div>
-      <div class="col col-md-8 col-12 order-md-2 order-1 mb-3">
+      <div class="col col-md-9 col-12 order-md-2 order-1 mb-3">
         <div class="card">
           <div class="card-header">
             Current Train Schedule
@@ -64,7 +64,9 @@
                   <th scope="col">Destination</th>
                   <th scope="col">Frequency (min)</th>
                   <th scope="col">Next Arrival</th>
-                  <th scope="col">Minutes Away</th>
+                  <th scope="col">Time Until</th>
+                  <th scope="col">Edit</th>
+                  <th scope="col">Delete</th>
                 </tr>
               </thead>
               <tbody>
@@ -77,6 +79,37 @@
     </div>
   </div>
 
+
+
+
+   <!-- Delete Train Modal -->
+   <div class="modal fade" id="deleteTrainModal" tabindex="-1" role="dialog" aria-labelledby="deleteTrainModalTitle"
+   aria-hidden="true">
+   <div class="modal-dialog modal-dialog-centered" role="document">
+     <div class="modal-content">
+       <div class="modal-header">
+         <h5 class="modal-title" id="deleteTrainModalTitle">Delete This Train?</h5>
+         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+         </button>
+       </div>
+       <div class="modal-body">
+         Are you sure you want to delete this train?
+       </div>
+       <div class="modal-body">
+         <div class="row justify-content-between">
+           <div class="col">
+             <button type="button" class="btn btn-danger" id="deleteTrain">Yes, delete this</button>
+           </div>
+           <div class="col text-right">
+             <button type="button" class="btn btn-primary" id="doNotDeleteItem">No, keep this</button>
+           </div>
+         </div>
+       </div>
+     </div>
+   </div>
+ </div>
+ <!-- end delete train modal -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/umd/popper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/js/bootstrap.min.js"></script>
